# ARM_Lite

./: .gitignore  .gitmodules  LICENSE  README.md  _config.yml  index.md
.github/workflows/: build_compiler.yml
ARM_Lite_CPU/: ARM_CPU.v  ARM_Lite_CPU.xpr  CPU_TEST.v  CPU_TEST_behav.wcfg
ARM_Lite_Compiler/: .gitignore  CMakeLists.txt  compiler.cpp  compiler.h  main.cpp  utils.h
Figure/CPU/: AMR_Lite_CPU.eps  AMR_Lite_CPU.vsdx  ARM_Lite_CPU.eps  ARM_Lite_CPU.vsdx
