CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(ARM_Lite_Compiler VERSION 1.0)

# SET(CMAKE_OSX_ARCHITECTURES arm64;x86_64)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(compile main.cpp compiler.cpp)

install(TARGETS compile)
